syntax = "proto2";

import public "common_client.proto";

package ddproto;

/********************************* 跑得快-所有协议的id ***************************************/
//跑得快游戏中用到的协议枚举id
enum pdk_enum_protoId {
    //common
    PDK_PID_HEARTBEAT = 0; //心跳
    PDK_PID_QUICK_CONN = 1; //连接服务器
    PDK_PID_QUICK_CONN_ACK = 2; //
    PDK_PID_GAME_LOGIN = 3; //登录游戏
    PDK_PID_GAME_LOGIN_ACK = 4; //

   //pdk proto
    PDK_PID_CREATEROOM = 5; //创建房间
    PDK_PID_CREATEROOM_ACK = 6; //创建房间-回复

    PDK_PID_ENTER_ROOM = 7; //进入房间
    PDK_PID_ENTER_ROOM_ACK = 8; //进入房间-回复
    PDK_PID_SEND_GAMEINFO = 9; //进入房间成功的游戏信息 广播

    PDK_PID_READY = 10; //准备
    PDK_PID_READY_ACK = 11; //准备-回复

    PDK_PID_OPENING = 12; //开局

    PDK_PID_DEAL_CARDS = 13; //发牌
}
////////////////////////////////////////////////////////////////////////////////////




/********************************* 跑得快-流程协议的结构 ***************************************/

/**************** 创建房间 ****************/
// 跑得快创建房间
message pdk_req_createDesk {
    optional ProtoHeader header = 1;
}
// 跑得快创建房间回复
message pdk_ack_createDesk {
    optional ProtoHeader header = 1;
}
///////////////////////////////////////////


/**************** 进入房间 ****************/
// 请求进入房间
message pdk_req_enterDesk {
    optional ProtoHeader header = 1;
}
// 请求进入房间的回复
message pdk_ack_enterDesk {
    optional ProtoHeader header = 1;
}
// 进入房间成功发送游戏信息(广播)
message pdk_bc_gameInfo {
    optional ProtoHeader header = 1;
}
///////////////////////////////////////////


/**************** 游戏准备 ****************/
// 请求准备游戏
message pdk_req_ready {
    optional ProtoHeader header = 1;
}
// 请求准备游戏的回复
message pdk_ack_ready {
    optional ProtoHeader header = 1;
}
///////////////////////////////////////////


/**************** 通知开局 ****************/
// 通知开局的广播 扣除的房费放在这里
message pdk_bc_opening {
    optional ProtoHeader header = 1;
}
///////////////////////////////////////////


/**************** 发牌 ****************/
// 发牌的广播 每个玩家的手牌id数组 明牌开始的需要亮出来
message pdk_bc_dealCards {
    optional ProtoHeader header = 1;
}
///////////////////////////////////////////

////////////////////////////////////////////////////////////////////////////////////